--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "prop-types": "^15.7.2",
     "react": "^16.9.0",
     "react-apexcharts": "^1.3.3",
+    "react-autosuggest": "^9.4.3",
     "react-dom": "^16.9.0",
     "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.1",
-    "react-scripts": "3.1.1",
+    "react-scripts": "^3.3.0",
     "react-transition-group": "^4.3.0",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
@@ -41,7 +42,6 @@
     ]
   },
   "devDependencies": {
-    "eslint": "^6.2.2",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
